# basic-todo-app

./: database.db  main.py  pyproject.toml  requirements.txt  vite.config.js
backend/: app.py  main.py
backend/models/: todo_models.py
backend/routes/: todo_routes.py
src/services/: todoService.js
todo-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
todo-frontend/src/: App.jsx  api.js  index.css
todo-frontend/src/components/: ErrorMessage.jsx  LoadingSpinner.jsx  TodoForm.jsx  TodoItem.jsx  TodoList.jsx
todo-frontend/src/hooks/: useTodos.js
todo-frontend/src/services/: todoService.js
