[project]
name = "fastapi-reminder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "axios>=0.4.0",
    "fastapi[all]>=0.116.1",
    "pydantic>=2.11.7",
    "sqlmodel[all]>=0.0.24",
    "typing>=3.10.0.0",
    "uvicorn>=0.35.0",
]
